--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ margin-right: 4px;
 
   <section class="hero">
     <div>
-      <img src="Images/Joueur FC.png" alt="Visuel Joueur" style="max-width: 180px; border-radius: 12px;" />
-    </div>
+      <img src="images/joueur-fc.png" alt="Visuel Joueur" style="max-width: 180px; border-radius: 12px;" />
+    </div>  
     <div class="features">
       <h2>Trouvez votre club sportif <span class="blue">gratuitement</span></h2>
       <p>Détections, matchs, entraînements, plannings, communication.<br />Une seule app pour tout gérer.</p>
@@ -284,66 +284,67 @@ margin-right: 4px;
 
   <div class="carousel" id="carousel">
     <div class="carousel-item">
-      <img src="Images/Détections.png" alt="Détections">
+      <img src="images/detections.png" alt="Détections">
       <p>Ici tu peux trouver directement de nouvelles équipes en participant aux détections proposées autour de toi.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Stages.png" alt="Stages">
+      <img src="images/stages.png" alt="Stages">
       <p>Participe à des stages sportifs pour progresser et rencontrer d'autres passionnés.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Tournois.png" alt="Tournois">
+      <img src="images/tournois.png" alt="Tournois">
       <p>Découvre ou propose des tournois pour te challenger et prendre du plaisir.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Entainements ouiverts.png" alt="Entraînements ouverts">
+      <img src="images/entrainements-ouverts.png" alt="Entraînements ouverts">
       <p>Teste un club en participant à des entraînements ouverts sans engagement.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Filtres recherches évenements.png" alt="Filtres">
+      <img src="images/filtres-recherches-evenements.png" alt="Filtres">
       <p>Utilise nos filtres avancés pour trouver les événements qui correspondent à ton niveau et tes envies.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Trouve ton club.png" alt="Trouver club">
+      <img src="images/trouve-ton-club.png" alt="Trouver club">
       <p>Trouve le club qui te correspond près de chez toi en quelques clics.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Trouve ton équipe.png" alt="Trouver équipe">
+      <img src="images/trouve-ton-equipe.png" alt="Trouver équipe">
       <p>Tu veux intégrer une nouvelle équipe ? On t’aide à faire le lien simplement.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Détails évenement.png" alt="Détails événements">
+      <img src="images/details-evenement.png" alt="Détails événements">
       <p>Consulte les informations détaillées de chaque événement avant de t’y inscrire.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Mes évenements.png" alt="Mes événements">
+      <img src="images/mes-evenements.png" alt="Mes événements">
       <p>Retrouve tous les événements auxquels tu es inscrit depuis ton tableau de bord.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Mon effectif.png" alt="Effectif">
+      <img src="images/mon-effectif.png" alt="Effectif">
       <p>Gère et suis ton effectif ou ton groupe en un coup d’œil si tu es encadrant.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Profil partenaires.png" alt="Partenaires">
+      <img src="images/profil-partenaires.png" alt="Partenaires">
       <p>Découvre les partenaires des clubs et leurs offres réservées à la communauté.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Iphone Profil.png" alt="Profil">
+      <img src="images/iphone-profil.png" alt="Profil">
       <p>Crée ton profil joueur ou coach et valorise ton parcours sportif.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Mes messages.png" alt="Messages">
+      <img src="images/mes-messages.png" alt="Messages">
       <p>Échange avec les clubs et les joueurs grâce à la messagerie intégrée.</p>
     </div>
     <div class="carousel-item">
-      <img src="Images/Mes notifications.png" alt="Notifications">
+      <img src="images/mes-notifications.png" alt="Notifications">
       <p>Sois informé en temps réel de toutes les nouveautés qui te concernent.</p>
     </div>
   </div>
+  
 
   <div class="cta">
     <p><strong>Simplifiez votre pratique sportive. Rejoignez la communauté FoundClub !</strong></p>
-    <img src="Images/png-clipart-app-store-google-play-apple-apple-text-logo.png" alt="Boutons App Store et Google Play" class="store-badge" />
+    <img src="images/store-badges.png" alt="Boutons App Store et Google Play" class="store-badge" />
     <br />
     <button onclick="window.location.href='https://foundclub.app'">Voir une démo de l'app</button>
   </div>
