--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <!-- Favicons -->
 <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg" />
