--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <!-- Favicons -->
-<link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg" />
-<link rel="shortcut icon" href="images/favicon/favicon.ico" />
+ <!-- Favicon principale (favicon.ico à la racine du projet) -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<!-- Compatibilité mobile (facultatif mais utile) -->
 <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
 <link rel="manifest" href="images/favicon/site.webmanifest" />
   <meta name="description" content="Rejoins FoundClub, l'application qui te permet de trouver ton club sportif, participer à des détections, matchs, tournois, et gérer ta saison. Gratuitement.">
