--- a/index.html
+++ b/index.html
@@ -389,9 +389,14 @@ margin-right: 4px;
     <div id="contact" class="contact-section">
       <p>📧 contact@foundclubpro.com</p>
       <p>📞 07 78 81 39 15</p>
+      <p>
+        <a href="cgu.html" style="color: #01B3F4; text-decoration: none;">Conditions Générales d’Utilisation</a> ·
+        <a href="suppression.html" style="color: #01B3F4; text-decoration: none;">Suppression de compte</a> ·
+        <a href="contact.html" style="color: #01B3F4; text-decoration: none;">Contact support</a>
+      </p>
     </div>    
     &copy; 2025 FoundClub. Tous droits réservés. | Made in Marseille
-  </footer>
+  </footer>  
 
   <script>
     const carousel = document.querySelector('.carousel');
