--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ margin-right: 4px;
   </nav>  
   <header>
     <h1 class="logo-big"><span class="blue">FOUND</span>CLUB</h1>
-    <p>Disponible en mai 2025</p>
+    <p>Disponible le 15 mai 2025</p>
   </header>
 
   <section class="hero">
