--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
  <!-- Favicon principale (favicon.ico à la racine du projet) -->
-<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="icon" type="image/png" href="C:\Users\Clement\Pictures\logo_32x32.png">
 <!-- Compatibilité mobile (facultatif mais utile) -->
 <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
 <link rel="manifest" href="favicon/site.webmanifest" />
