--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
  <!-- Favicon principale (favicon.ico à la racine du projet) -->
-<link rel="icon" type="image/png" href="C:\Users\Clement\Pictures\logo_32x32.png">
+<link rel="icon" type="image/png" href="favicon.png">
   <meta name="description" content="Rejoins FoundClub, l'application qui te permet de trouver ton club sportif, participer à des détections, matchs, tournois, et gérer ta saison. Gratuitement.">
 <meta name="keywords" content="club de sport, foot, basket, détection, tournoi, entraînement, joueurs, application, sportif, Marseille, FoundClub">
 <meta name="author" content="FoundClub">
