--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FoundClub – Trouve ton club</title>
- <!-- Favicon principale (favicon.ico à la racine du projet) -->
-<link rel="icon" href="/favicon.ico" type="image/x-icon" />
-<!-- Compatibilité mobile (facultatif mais utile) -->
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
-<link rel="manifest" href="favicon/site.webmanifest" />
+  <link rel="icon" href="images/favicon/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="images/favicon/site.webmanifest" />  
   <meta name="description" content="Rejoins FoundClub, l'application qui te permet de trouver ton club sportif, participer à des détections, matchs, tournois, et gérer ta saison. Gratuitement.">
 <meta name="keywords" content="club de sport, foot, basket, détection, tournoi, entraînement, joueurs, application, sportif, Marseille, FoundClub">
 <meta name="author" content="FoundClub">
