--- a/Club.html
+++ b/Club.html
@@ -117,18 +117,39 @@
       color: #01B3F4;
       font-weight: bold;
     }
+
+
+.logo {
+  height: 36px;
+}
+
+.page-title {
+  text-align: center;
+  margin: 40px 0 20px;
+}
+
+.page-title h1 {
+  color: #01B3F4;
+  font-size: 2rem;
+  margin: 0;
+}
+
   </style>
 </head>
 <body>
   <header>
     <img src="images/foundclub-logo.png" alt="FoundClub Logo" class="logo">
-    <h1>Clubs – Comment ça marche ?</h1>
     <nav>
       <a href="index.html">Accueil</a>
-      <a href="joueur.html">Joueur</a>
-      <a href="entraineur.html">Entraîneur</a>
     </nav>
   </header>
+  
+  
+  <div class="page-title">
+    <h1>Clubs – Comment ça marche ?</h1>
+  </div>
+  
+  
 
   <div class="section">
     <div class="storyboard-item">
