--- a/Club.html
+++ b/Club.html
@@ -6,6 +6,30 @@
   <title>Clubs – FoundClub</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
+    @media (max-width: 768px) {
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .header-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav {
+    margin-left: auto;
+  }
+
+  .page-title h1 {
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+  }
+}
+
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
