--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ margin-right: 4px;
       </a>
     </div>
   
-    <div class="contact-section">
+    <div id="contact" class="contact-section">
       <p>📧 contact@foundclubpro.com</p>
       <p>📞 07 78 81 39 15</p>
       <p>
