--- a/Club.html
+++ b/Club.html
@@ -7,29 +7,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     @media (max-width: 768px) {
-  header {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .header-container {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  nav {
-    margin-left: auto;
-  }
-
-  .page-title h1 {
-    font-size: 1.5rem;
-    text-align: center;
-    width: 100%;
-  }
-}
-
+      header {
+        flex-direction: row;
+        justify-content: space-between;
+      }
+      nav {
+        margin-left: auto;
+      }
+      .page-title h1 {
+        font-size: 1.5rem;
+        text-align: center;
+        width: 100%;
+      }
+    }
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
@@ -50,15 +40,8 @@
       z-index: 999;
     }
     header img.logo {
-  height: 28px;
-  margin-right: 20px;
-}
-    header h1 {
-      color: #01B3F4;
-      margin: 0;
-      font-size: 1.5rem;
-      flex: 1;
-      text-align: center;
+      height: 28px;
+      margin-right: 20px;
     }
     nav {
       display: flex;
@@ -82,14 +65,44 @@
     .section {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 0 20px 60px;
+      padding: 0 20px 100px;
     }
     .storyboard-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 60px;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: radial-gradient(circle at center, #111 0%, #0a0a0a 100%);
+  padding: 40px 20px;
+  border-radius: 16px;
+  box-shadow: 0 0 12px rgba(0,179,244,0.1);
+  margin-bottom: 60px;
+}
+.storyboard-item {
+  animation: fadeUp 0.6s ease-in-out both;
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.storyboard-item h3 {
+  font-size: 1.4rem;
+  margin-bottom: 20px;
+  color: #fff;
+  font-weight: 600;
+}
+.storyboard-item h3 span {
+  color: #01B3F4;
+  font-weight: 700;
+  margin-right: 6px;
+}
+
     .storyboard-item img {
       max-width: 180px;
       width: 100%;
@@ -123,6 +136,7 @@
       padding: 40px;
       border-radius: 16px;
       box-shadow: 0 0 15px rgba(0,0,0,0.5);
+      margin-bottom: 80px;
     }
     ul.benefits {
       list-style: none;
@@ -141,23 +155,51 @@
       color: #01B3F4;
       font-weight: bold;
     }
-
-
-.logo {
-  height: 36px;
-}
-
-.page-title {
-  text-align: center;
-  margin: 40px 0 20px;
-}
-
-.page-title h1 {
-  color: #01B3F4;
-  font-size: 2rem;
-  margin: 0;
-}
-
+    .logo {
+      height: 36px;
+    }
+    .page-title {
+      text-align: center;
+      margin: 40px 0 20px;
+    }
+    .page-title h1 {
+      color: #01B3F4;
+      font-size: 2rem;
+      margin: 0;
+    }
+    .join-section, .problem-section {
+      background: linear-gradient(135deg, #0f0f0f, #111111);
+      padding: 40px;
+      border-radius: 16px;
+      margin: 40px 20px;
+      border: 1px solid rgba(1,179,244,0.3);
+      box-shadow: 0 0 20px rgba(1,179,244,0.2);
+    }
+    .join-section h2, .problem-section h2 {
+      text-align: center;
+      color: #01B3F4;
+      margin-bottom: 30px;
+    }
+    .problem-item {
+      margin-bottom: 40px;
+      padding-top: 10px;
+    }
+    .problem-item p {
+      font-size: 1.05rem;
+      color: #ccc;
+      text-align: center;
+    }
+    .problem-item strong {
+      color: #01B3F4;
+      font-weight: 600;
+      display: inline-block;
+      margin-top: 8px;
+      animation: fadeIn 0.5s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
@@ -167,57 +209,93 @@
       <a href="index.html">Accueil</a>
     </nav>
   </header>
-  
-  
+
   <div class="page-title">
     <h1>Clubs – Comment ça marche ?</h1>
   </div>
-  
-  
 
-  <div class="section">
-    <div class="storyboard-item">
-      <img src="images/club/inscription.png" alt="Inscription">
-      <p>Une inscription super simple. On vous accompagne de A à Z, vous n’avez pratiquement qu’à vous connecter et compléter les infos que vous souhaitez.</p>
+  <div class="problem-section">
+    <h2>Des problématiques concrètes, des réponses simples</h2>
+    <div class="problem-item">
+      <p>📉 Vous utilisez les réseaux sociaux pour communiquer vos recrutements, mais chaque clic supplémentaire vous fait perdre des profils. Vous imaginez le nombre de talents que vous ratez à cause d'un processus trop complexe ?<br><strong>✔️ FoundClub rend le parcours clair, rapide et efficace.</strong></p>
     </div>
-
-    <div class="storyboard-item">
-      <img src="images/club/clubs.png" alt="Page Club">
-      <p>Vous aurez une page dédiée à votre club où vous pourrez ajouter vos équipes, vos contacts et vos sponsors.</p>
+    <div class="problem-item">
+      <p>👥 Vos effectifs sont pleins en début d’année puis fondent rapidement ? Il est difficile de faire des entraînements complets ?<br><strong>✔️ FoundClub permet à des joueurs ponctuels de rejoindre vos entraînements — une solution gagnant-gagnant, encadrée juridiquement.</strong></p>
     </div>
-
-    <div class="storyboard-item">
-      <img src="images/club/demandes-affiliations.png" alt="Affiliation">
-      <p>Vous pourrez assigner vos entraîneurs à vos équipes facilement grâce au bouton "Demandes d’affiliation".</p>
+    <div class="problem-item">
+      <p>📱 Vous gérez vos équipes sur WhatsApp ? Les discussions se mélangent avec votre vie perso ?<br><strong>✔️ FoundClub centralise tout : messagerie, convocations, présences. Moins de distraction, plus d'engagement.</strong></p>
     </div>
-
-    <div class="storyboard-item">
-      <img src="images/club/ajout-evenements.png" alt="Ajout d’évènement">
-      <p>Vous et vos entraîneurs pourrez créer des événements : détection, entraînement, entraînements ouverts, matchs amicaux, tournois et stages. <br>
-        <a href="evenements.html" class="button-link">Voir les types d’événements</a>
-      </p>
+    <div class="problem-item">
+      <p>📄 Vous diffusez vos tournois et stages via des fiches ou quelques posts sur les réseaux sociaux ?<br><strong>✔️ FoundClub vous offre un canal structuré et efficace, avec une visibilité bien au-delà de votre cercle habituel.</strong></p>
     </div>
-
-    <div class="storyboard-item">
-      <img src="images/club/Mon-equipe.png" alt="Page Équipe">
-      <p>Chaque équipe que vous ajoutez dispose d’une page dédiée, permettant à ses membres de suivre les événements et de répondre aux convocations (présence aux entraînements, matchs...).</p>
-    </div>
-
-    <div class="storyboard-item">
-      <img src="images/club/messagerie.png" alt="Messagerie">
-      <p>Une messagerie interne pour échanger avec les membres du club ou contacter des profils extérieurs qui vous intéressent.</p>
+    <div class="problem-item">
+      <p>🧩 Vous avez des besoins spécifiques ou des idées que vous n’avez même pas encore formulées ?<br><strong>✔️ FoundClub est un outil qui évolue avec vous, pensé pour s’adapter au quotidien réel des clubs.</strong></p>
     </div>
   </div>
 
   <h2>Pourquoi rejoindre FoundClub en tant que club ?</h2>
+<div class="section benefits" style="display: grid; gap: 24px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); background: transparent; box-shadow: none; padding: 0;">
 
-  <div class="section benefits">
-    <ul class="benefits">
-      <li><strong>Qualité :</strong> Gagnez en visibilité et attirez des profils que vous n’auriez pas atteints autrement.</li>
-      <li><strong>Quantité :</strong> Plus de visibilité + crédibilité = plus de joueurs dans vos équipes.</li>
-      <li><strong>Financier :</strong> Plus de monde à vos événements = plus de revenus pour votre club.</li>
-      <li><strong>Fluidité :</strong> Une application simple, intuitive, pensée pour aller vite : 3 clics et c’est fait !</li>
-    </ul>
+  <div style="background:#111; padding: 20px; border-radius: 16px; box-shadow: 0 0 12px rgba(1,179,244,0.2);">
+    <p><strong style="color:#01B3F4;">💡 Qualité</strong><br>Gagnez en visibilité et attirez des profils que vous n’auriez pas atteints autrement.</p>
+  </div>
+
+  <div style="background:#111; padding: 20px; border-radius: 16px; box-shadow: 0 0 12px rgba(1,179,244,0.2);">
+    <p><strong style="color:#01B3F4;">📈 Quantité</strong><br>Plus de visibilité + crédibilité = plus de joueurs dans vos équipes.</p>
+  </div>
+
+  <div style="background:#111; padding: 20px; border-radius: 16px; box-shadow: 0 0 12px rgba(1,179,244,0.2);">
+    <p><strong style="color:#01B3F4;">💰 Financier</strong><br>Plus de monde à vos événements = plus de revenus pour votre club.</p>
+  </div>
+
+  <div style="background:#111; padding: 20px; border-radius: 16px; box-shadow: 0 0 12px rgba(1,179,244,0.2);">
+    <p><strong style="color:#01B3F4;">⚡ Fluidité</strong><br>Une application simple, intuitive, pensée pour aller vite : 3 clics et c’est fait !</p>
+  </div>
+
+</div>
+
+
+<div class="section">
+  <div class="storyboard-item">
+    <h3><span>1.</span> Inscription</h3>
+    <img src="images/club/inscription.png" alt="Inscription">
+    <p>Une inscription super simple. On vous accompagne de A à Z, vous n’avez pratiquement qu’à vous connecter et compléter les infos que vous souhaitez.</p>
+  </div>
+  <div class="storyboard-item">
+    <h3><span>2.</span> Page Club</h3>
+    <img src="images/club/clubs.png" alt="Page Club">
+    <p>Vous aurez une page dédiée à votre club où vous pourrez ajouter vos équipes, vos contacts et vos sponsors.</p>
+  </div>
+  <div class="storyboard-item">
+    <h3><span>3.</span> Demandes d’affiliation</h3>
+    <img src="images/club/demandes-affiliations.png" alt="Affiliation">
+    <p>Vous pourrez assigner vos entraîneurs à vos équipes facilement grâce au bouton "Demandes d’affiliation".</p>
+  </div>
+  <div class="storyboard-item">
+    <h3><span>4.</span> Ajout d’événement</h3>
+    <img src="images/club/ajout-evenements.png" alt="Ajout d’évènement">
+    <p>Vous et vos entraîneurs pourrez créer des événements : détection, entraînement, entraînements ouverts, matchs amicaux, tournois et stages.<br>
+      <a href="evenements.html" class="button-link">Voir les types d’événements</a>
+    </p>
+  </div>
+  <div class="storyboard-item">
+    <h3><span>5.</span> Page Équipe</h3>
+    <img src="images/club/Mon-equipe.png" alt="Page Équipe">
+    <p>Chaque équipe que vous ajoutez dispose d’une page dédiée, permettant à ses membres de suivre les événements et de répondre aux convocations.</p>
+  </div>
+  <div class="storyboard-item">
+    <h3><span>6.</span> Messagerie</h3>
+    <img src="images/club/messagerie.png" alt="Messagerie">
+    <p>Une messagerie interne pour échanger avec les membres du club ou contacter des profils extérieurs qui vous intéressent.</p>
+  </div>
+</div>
+
+
+  <div class="join-section">
+    <h2>Comment nous rejoindre ?</h2>
+    <p style="text-align: center; color: #ccc; font-size: 1.1rem;">Prenez simplement contact avec nous :<br>
+      📞 07 78 81 39 15<br>
+      📧 contact@foundclubpro.com</p>
   </div>
 </body>
 </html>
