--- a/Club.html
+++ b/Club.html
@@ -217,7 +217,8 @@
   <div class="problem-section">
     <h2>Des problématiques concrètes, des réponses simples</h2>
     <div class="problem-item">
-      <p>📉 Vous utilisez les réseaux sociaux pour communiquer vos recrutements, mais chaque clic supplémentaire vous fait perdre des profils. Vous imaginez le nombre de talents que vous ratez à cause d'un processus trop complexe ?<br><strong>✔️ FoundClub rend le parcours clair, rapide et efficace.</strong></p>
+      <p>📉 <p>📉 Vous passez par les réseaux sociaux pour vos recrutements ? À chaque étape en trop, vous perdez des joueurs potentiels.<br><strong>✔️ FoundClub rend le parcours clair, rapide et efficace.</strong></p>
+    </strong></p>
     </div>
     <div class="problem-item">
       <p>👥 Vos effectifs sont pleins en début d’année puis fondent rapidement ? Il est difficile de faire des entraînements complets ?<br><strong>✔️ FoundClub permet à des joueurs ponctuels de rejoindre vos entraînements — une solution gagnant-gagnant, encadrée juridiquement.</strong></p>
