--- a/Club.html
+++ b/Club.html
@@ -217,7 +217,7 @@
   <div class="problem-section">
     <h2>Des problématiques concrètes, des réponses simples</h2>
     <div class="problem-item">
-      <p>📉 <p>📉 Vous passez par les réseaux sociaux pour vos recrutements ? À chaque étape en trop, vous perdez des joueurs potentiels.<br><strong>✔️ FoundClub rend le parcours clair, rapide et efficace.</strong></p>
+    <p>📉 Vous passez par les réseaux sociaux pour vos recrutements ? À chaque étape en trop, vous perdez des joueurs potentiels.<br><strong>✔️ FoundClub rend le parcours clair, rapide et efficace.</strong></p>
     </strong></p>
     </div>
     <div class="problem-item">
